# blog

./: .env  .gitignore  LICENSE  pyproject.toml  readme.md  settings.toml
blog/: app.py
blog/extensions/: configuration.py
blog/extensions/auth/: forms.py
blog/extensions/config/: __init__.py
blog/extensions/web/: __init__.py  routes.py
blog/static/css/: materialize.min.css  style.css
blog/templates/: about.html  base.html  explore.html  signin.html
blog/templates/macros/: posts.html
blog/web/: main.py
